--- a/kwerenda.html
+++ b/kwerenda.html
@@ -11,7 +11,7 @@
 <body>
     <div style="text-align: center; vertical-align: middle;">
         Ta strona nie prowadzi do nikąd.</br>
-        <a href="../">Wróć skąd przybyłeś</a>
+        <a href="index.php">Wróć skąd przybyłeś</a>
     </div>
 
 </body>
